# Rust-with-Axum

./: docker-compose.yml
data/: Cargo.toml
data/src/: lib.rs  main.rs
data/src/database/: mod.rs  prelude.rs
data/src/routes/: create_task.rs  custom_json_extractor.rs  mod.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
routing/: Cargo.toml
routing/src/: lib.rs  main.rs
routing/src/routes/: always_errors.rs  get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  read_middleware_custom_header.rs  returns_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
