[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
postgres = "0.19.7"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.189", features = ["serde_derive"] }
tokio = { version = "1.33.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
